refactor(metrics): 移除查询标签并收口旧查询转换
验证：独立提交源码快照，Java 21，23 类 218 项测试通过，零失败/错误/跳过。
构建沿用未提交的本地主 POM 配置；仓库原主 POM 的父依赖离线解析问题仍保留。