@@ -1,13 +1,14 @@
 package com.wind.integration.metrics.query;
 
-import com.wind.integration.tag.WindTag;
+import com.fasterxml.jackson.annotation.JsonAnySetter;
 import io.swagger.v3.oas.annotations.media.Schema;
+import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -16,30 +17,28 @@ import java.util.Set;
 /**
  * 指标取值、求值和对象聚合共用的条件，不携带指标编码或定义修订。
  *
- * <p>通用计算可以使用集合主体、可空时间、标签及任意业务变量。正式 DSL 查询必须在
+ * <p>通用计算可以使用集合主体、可空时间及任意业务变量。正式 DSL 查询必须在
  * 执行入口调用 {@link MetricQueryValidator#validateDsl}，再依据固定定义校验。
  * 条件容器被复制，Map 中的 Date/Timestamp 同时复制；任意业务对象仍由宿主维护其生命周期，
  * 不能据此宣称运行上下文可序列化或已被深度冻结。</p>
  *
- * @param subjectId 单主体标识或主体集合；全局查询为空
- * @param startTime 时间下界，可空；是否包含由具体计算合同决定，DSL 为包含
- * @param endTime 时间上界，可空；是否包含由具体计算合同决定，DSL 为不包含
+ * @param subjectId       单主体标识或主体集合；全局查询为空
+ * @param subjectType     主体类型；省略时由已选指标定义确定
+ * @param startTime       时间下界，可空；是否包含由具体计算合同决定，DSL 为包含
+ * @param endTime         时间上界，可空；是否包含由具体计算合同决定，DSL 为不包含
  * @param dimensionValues 具名维度值，与业务变量保持独立
  * @param parameterValues 业务变量或声明参数；DSL 仅允许 Integer
- * @param subjectType 主体类型；省略时由已选指标定义确定
- * @param searchTags 查询标签；多个标签的组合语义沿计算实现
  * @author wuxp
  * @since 2026-09-15
  */
 @Schema(description = "通用指标查询条件，不包含指标编码和定义修订")
 public record MetricQuery(
         @Nullable @Schema(description = "单主体或主体集合，全局为空") Object subjectId,
+        @Nullable @Schema(description = "主体类型；省略时由定义确定") String subjectType,
         @Nullable @Schema(description = "时间下界；DSL 必填且包含") LocalDateTime startTime,
         @Nullable @Schema(description = "时间上界；DSL 必填且不包含") LocalDateTime endTime,
         @Nullable @Schema(description = "独立具名维度") Map<String, Object> dimensionValues,
-        @Nullable @Schema(description = "业务变量；DSL 仅允许声明的整数参数") Map<String, Object> parameterValues,
-        @Nullable @Schema(description = "主体类型；省略时由定义确定") String subjectType,
-        @Nullable @Schema(description = "查询标签；正式 DSL 不接受非空标签") Collection<WindTag> searchTags) {
+        @Nullable @Schema(description = "业务变量；DSL 仅允许声明的整数参数") Map<String, Object> parameterValues) {
 
     public MetricQuery {
         if (subjectId instanceof Collection<?> subjects) {
@@ -47,31 +46,43 @@ public record MetricQuery(
         }
         dimensionValues = copyValues(dimensionValues);
         parameterValues = copyValues(parameterValues);
-        searchTags = searchTags == null ? null : copyCollection(searchTags);
     }
 
     /**
-     * 创建不额外指定主体类型和标签的条件，仍由执行入口决定适用性。
+     * 创建不额外指定主体类型的条件，仍由执行入口决定适用性。
      *
-     * @param subjectId 单主体或主体集合
-     * @param startTime 时间下界
-     * @param endTime 时间上界
+     * @param subjectId       单主体或主体集合
+     * @param startTime       时间下界
+     * @param endTime         时间上界
      * @param dimensionValues 具名维度值
      * @param parameterValues 业务变量或声明参数
      */
     public MetricQuery(@Nullable Object subjectId, @Nullable LocalDateTime startTime,
-                               @Nullable LocalDateTime endTime, @Nullable Map<String, Object> dimensionValues,
-                               @Nullable Map<String, Object> parameterValues) {
-        this(subjectId, startTime, endTime, dimensionValues, parameterValues, null, List.of());
+                       @Nullable LocalDateTime endTime, @Nullable Map<String, Object> dimensionValues,
+                       @Nullable Map<String, Object> parameterValues) {
+        this(subjectId, null, startTime, endTime, dimensionValues, parameterValues);
     }
 
-    /** @return 隔离可变日期值后的只读维度容器，保留显式 null */
+    /**
+     * 拒绝模型之外的 JSON 条件，避免宽松 ObjectMapper 静默丢弃已退役或拼错的过滤字段。
+     * 本方法不保存任何附加字段，也不参与序列化。
+     */
+    @JsonAnySetter
+    private void rejectUnknownProperty(String name, @Nullable Object value) {
+        throw new IllegalArgumentException("Unknown MetricQuery property: " + name);
+    }
+
+    /**
+     * @return 隔离可变日期值后的只读维度容器，保留显式 null
+     */
     @Override
     public @Nullable Map<String, Object> dimensionValues() {
         return copyValues(dimensionValues);
     }
 
-    /** @return 隔离可变日期值后的只读变量容器，业务上下文对象保持原引用 */
+    /**
+     * @return 隔离可变日期值后的只读变量容器，业务上下文对象保持原引用
+     */
     @Override
     public @Nullable Map<String, Object> parameterValues() {
         return copyValues(parameterValues);
@@ -82,8 +93,7 @@ public record MetricQuery(
     }
 
     private static <T> Collection<T> copyCollection(Collection<T> source) {
-        return source instanceof Set<?> ? Collections.unmodifiableSet(new LinkedHashSet<>(source))
-                : Collections.unmodifiableList(new ArrayList<>(source));
+        return source instanceof Set<?> ? Collections.unmodifiableSet(new LinkedHashSet<>(source)) : List.copyOf(source);
     }
 
     /**
@@ -100,12 +110,16 @@ public record MetricQuery(
      */
     public static class Builder {
         private Object subjectId;
+
         private LocalDateTime startTime;
+
         private LocalDateTime endTime;
-        private Map<String, Object> dimensionValues;
-        private Map<String, Object> parameterValues;
+
+        private Map<String, Object> dimensionValues = new HashMap<>();
+
+        private Map<String, Object> parameterValues = new HashMap<>();
+
         private String subjectType;
-        private Collection<WindTag> searchTags;
 
         private Builder() {
         }
@@ -116,7 +130,7 @@ public record MetricQuery(
          * @param subjectId 主体标识
          * @return this
          */
-        public Builder subjectId(@Nullable Object subjectId) {
+        public Builder subjectId(@NonNull Object subjectId) {
             this.subjectId = subjectId;
             return this;
         }
@@ -127,7 +141,7 @@ public record MetricQuery(
          * @param subjectIds 主体集合
          * @return this
          */
-        public Builder subjectIds(@Nullable Collection<?> subjectIds) {
+        public Builder subjectIds(@NonNull Collection<?> subjectIds) {
             this.subjectId = subjectIds;
             return this;
         }
@@ -138,7 +152,7 @@ public record MetricQuery(
          * @param startTime 开始时间
          * @return this
          */
-        public Builder startTime(@Nullable LocalDateTime startTime) {
+        public Builder startTime(@NonNull LocalDateTime startTime) {
             this.startTime = startTime;
             return this;
         }
@@ -149,7 +163,7 @@ public record MetricQuery(
          * @param endTime 结束时间
          * @return this
          */
-        public Builder endTime(@Nullable LocalDateTime endTime) {
+        public Builder endTime(@NonNull LocalDateTime endTime) {
             this.endTime = endTime;
             return this;
         }
@@ -158,10 +172,10 @@ public record MetricQuery(
          * 设置时间范围。
          *
          * @param startTime 开始时间
-         * @param endTime 结束时间
+         * @param endTime   结束时间
          * @return this
          */
-        public Builder timeRange(@Nullable LocalDateTime startTime, @Nullable LocalDateTime endTime) {
+        public Builder timeRange(@NonNull LocalDateTime startTime, @Nullable LocalDateTime endTime) {
             this.startTime = startTime;
             this.endTime = endTime;
             return this;
@@ -170,14 +184,11 @@ public record MetricQuery(
         /**
          * 设置单个维度值。
          *
-         * @param name 维度名称
+         * @param name  维度名称
          * @param value 维度值
          * @return this
          */
-        public Builder dimension(String name, Object value) {
-            if (this.dimensionValues == null) {
-                this.dimensionValues = new java.util.HashMap<>();
-            }
+        public Builder dimension(@NonNull String name, Object value) {
             this.dimensionValues.put(name, value);
             return this;
         }
@@ -188,28 +199,19 @@ public record MetricQuery(
          * @param dimensions 维度映射
          * @return this
          */
-        public Builder dimensions(@Nullable Map<String, Object> dimensions) {
-            if (dimensions != null) {
-                if (this.dimensionValues == null) {
-                    this.dimensionValues = new java.util.HashMap<>(dimensions);
-                } else {
-                    this.dimensionValues.putAll(dimensions);
-                }
-            }
+        public Builder dimensions(@NonNull Map<String, Object> dimensions) {
+            this.dimensionValues.putAll(dimensions);
             return this;
         }
 
         /**
          * 设置单个参数值。
          *
-         * @param name 参数名称
+         * @param name  参数名称
          * @param value 参数值
          * @return this
          */
-        public Builder parameter(String name, Object value) {
-            if (this.parameterValues == null) {
-                this.parameterValues = new java.util.HashMap<>();
-            }
+        public Builder parameter(@NonNull String name, Object value) {
             this.parameterValues.put(name, value);
             return this;
         }
@@ -220,14 +222,8 @@ public record MetricQuery(
          * @param parameters 参数映射
          * @return this
          */
-        public Builder parameters(@Nullable Map<String, Object> parameters) {
-            if (parameters != null) {
-                if (this.parameterValues == null) {
-                    this.parameterValues = new java.util.HashMap<>(parameters);
-                } else {
-                    this.parameterValues.putAll(parameters);
-                }
-            }
+        public Builder parameters(@NonNull Map<String, Object> parameters) {
+            this.parameterValues.putAll(parameters);
             return this;
         }
 
@@ -237,39 +233,8 @@ public record MetricQuery(
          * @param subjectType 主体类型
          * @return this
          */
-        public Builder subjectType(@Nullable String subjectType) {
+        public Builder subjectType(@NonNull String subjectType) {
             this.subjectType = subjectType;
-            return this;
-        }
-
-        /**
-         * 添加单个查询标签。
-         *
-         * @param tag 标签
-         * @return this
-         */
-        public Builder tag(WindTag tag) {
-            if (this.searchTags == null) {
-                this.searchTags = new ArrayList<>();
-            }
-            this.searchTags.add(tag);
-            return this;
-        }
-
-        /**
-         * 批量设置查询标签。
-         *
-         * @param tags 标签集合
-         * @return this
-         */
-        public Builder tags(@Nullable Collection<WindTag> tags) {
-            if (tags != null) {
-                if (this.searchTags == null) {
-                    this.searchTags = new ArrayList<>(tags);
-                } else {
-                    this.searchTags.addAll(tags);
-                }
-            }
             return this;
         }
 
@@ -281,12 +246,11 @@ public record MetricQuery(
         public MetricQuery build() {
             return new MetricQuery(
                     subjectId,
+                    subjectType,
                     startTime,
                     endTime,
                     dimensionValues,
-                    parameterValues,
-                    subjectType,
-                    searchTags
+                    parameterValues
             );
         }
     }
